<resources>
    <string name="app_name">Hello</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email_address">Email</string>
    <string name="enter_usename">Enter Usernane</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_dob">Enter DOB</string>
    <string name="enter_description">Description of person</string>
    <string name="enter_occupation">Enter Occupation</string>
    <string name="hint_username">Username</string>
    <string name="enter_username">Username</string>
    <string name="signup_input_name">Name</string>
    <string name="title">Register</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_back">BACK</string>
    <string name="my_image_desc">Flowers</string>
    <string name="register">REGISTER</string>
    <string name="email">Email</string>
    <string name="Profile">Profile</string>
    <string name="flower">flower</string>
    <string name="select_your_date_of_birth">Select your Date of birth</string>
    <string name="joette_damo_may_11_2020">Joette Damo May 11 2020</string>
    <string name="text_profile">Profile</string>
    <string name="text_matches">Matches</string>
    <string name="text_settings">Settings</string>


   <!-- <string name="action_settings">Settings</string>-->


</resources>
