<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Profile"
            android:layout_gravity="center">

        </TextView>

        <EditText
            android:id="@+id/sign_input_name"
            android:layout_height="wrap_content"
            android:hint="@string/enter_full_name"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:importantForAutofill="no">
        </EditText>

        <EditText
            android:id="@+id/signup_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/enter_username"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:importantForAutofill="no">
        </EditText>

        <EditText
            android:id="@+id/enter_age"
            android:layout_height="wrap_content"
            android:hint="@string/enter_age"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:importantForAutofill="no">
        </EditText>

        <Button
            android:id="@+id/select_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="#000000"
            android:textSize="15sp"
            android:text="@string/select_your_date_of_birth" />

        <EditText
            android:id="@+id/enter_description"
            android:layout_height="wrap_content"
            android:hint="@string/enter_description"
            android:inputType="textMultiLine"
            android:lines="4"
            android:layout_width="fill_parent"
            android:importantForAutofill="no">
        </EditText>

        <EditText
            android:id="@+id/enter_occupation"
            android:layout_height="wrap_content"
            android:hint="@string/enter_occupation"
            android:inputType="textMultiLine"
            android:lines="2"
            android:layout_width="fill_parent"
            android:importantForAutofill="no">
        </EditText>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/my_image"
            android:contentDescription="@string/my_image_desc"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit"
            android:layout_width="fill_parent">
        </Button>

        <Button
            android:id="@+id/btn_back"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:layout_width="fill_parent">
        </Button>

        <TextView
            android:id="@+id/joette_damo_may_11_2020"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/joette_damo_may_11_2020"
            android:layout_gravity="center">

        </TextView>

    </LinearLayout>
</ScrollView>

